--- a/public/index.html
+++ b/public/index.html
@@ -1358,7 +1358,7 @@
 
                     <div class="slds-grid">
                         
-                        <div class="slds-col">
+                        <div class="slds-col slds-size_2-of-5">
 
                             <div class="slds-form-element sfmc-input">
                                 <label class="slds-form-element__label">Promotion ID</label>
@@ -1369,7 +1369,7 @@
 
                         </div>
 
-                        <div class="slds-col">
+                        <div class="slds-col slds-size_1-of-5">
 
                             <div class="slds-form-element">
                                 <label class="slds-form-element__label">No. of redemptions? (999 = unlimited)</label>
@@ -1399,7 +1399,7 @@
 
                         </div>
 
-                        <div class="slds-col">
+                        <div class="slds-col slds-size_1-of-5">
 
                             <div class="slds-form-element">
                                 <label class="slds-form-element__label">Days to add</label>
