Missed a CSS class

--- a/public/index.html
+++ b/public/index.html
@@ -1389,7 +1389,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="slds-col">
+                        <div class="slds-col slds-size_1-of-5">
                             <div class="slds-clearfix">
                                 <div class="slds-float_right">
                                     <div class="slds-form-element sfmc-input">
@@ -1406,7 +1406,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="slds-col">
+                        <div class="slds-col slds-size_1-of-5">
                             <div class="slds-form-element">
                                 <label class="slds-form-element__label">Days to add</label>
                                 <div class="slds-form-element__control">
