--- a/public/index.html
+++ b/public/index.html
@@ -1372,8 +1372,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="slds-grid slds-size_2-of-5"> 
-                        <div class="slds-col">
+                    <div class="slds-grid"> 
+                        <div class="slds-col slds-size_2-of-5">
                             <div class="slds-form-element sfmc-input">
                                 <label class="slds-form-element__label">Promotion ID</label>
                                 <div class="slds-form-element__control">
