--- a/public/index.html
+++ b/public/index.html
@@ -130,21 +130,21 @@
                         <div class="slds-form-element__control">
                             <span class="slds-radio">
                                 <input type="radio" class="promotion_type" id="promotion_type" value="online" name="promotionType" checked="checked" />
-                                <label class="slds-radio__label" for="radio-1">
+                                <label class="slds-radio__label" for="promotion_type">
                                     <span class="slds-radio_faux"></span>
                                     <span class="slds-form-element__label">Online Code Only</span>
                                 </label>
                             </span>
                             <span class="slds-radio">
                                 <input type="radio" class="promotion_type" id="promotion_type" value="instore" name="promotionType" />
-                                <label class="slds-radio__label" for="radio-2">
+                                <label class="slds-radio__label" for="promotion_type">
                                     <span class="slds-radio_faux"></span>
                                     <span class="slds-form-element__label">In-store Code Only</span>
                                 </label>
                             </span>
                             <span class="slds-radio">
                                 <input type="radio" class="promotion_type" id="promotion_type" value="online_instore" name="promotionType" />
-                                <label class="slds-radio__label" for="radio-3">
+                                <label class="slds-radio__label" for="promotion_type">
                                     <span class="slds-radio_faux"></span>
                                     <span class="slds-form-element__label">Online and In-store Code</span>
                                 </label>
@@ -152,7 +152,7 @@
 
                             <span class="slds-radio">
                                 <input type="radio" class="promotion_type" id="promotion_type" value="no_code" name="promotionType" />
-                                <label class="slds-radio__label" for="radio-4">
+                                <label class="slds-radio__label" for="promotion_type">
                                     <span class="slds-radio_faux"></span>
                                     <span class="slds-form-element__label">No Code - Just a promotion association</span>
                                 </label>
