--- a/public/index.html
+++ b/public/index.html
@@ -129,30 +129,30 @@
                         <legend class="slds-form-element__legend slds-form-element__label">Select the type of promotion</legend>
                         <div class="slds-form-element__control">
                             <span class="slds-radio">
-                                <input type="radio" class="promotion_type" id="promotion_type" value="online" name="promotionType" checked="checked" />
-                                <label class="slds-radio__label" for="promotion_type">
+                                <input type="radio" class="promotion_type" id="radio-1" value="online" name="promotionType" checked="checked" />
+                                <label class="slds-radio__label" for="radio-1">
                                     <span class="slds-radio_faux"></span>
                                     <span class="slds-form-element__label">Online Code Only</span>
                                 </label>
                             </span>
                             <span class="slds-radio">
-                                <input type="radio" class="promotion_type" id="promotion_type" value="instore" name="promotionType" />
-                                <label class="slds-radio__label" for="promotion_type">
+                                <input type="radio" class="promotion_type" id="radio-2" value="instore" name="promotionType" />
+                                <label class="slds-radio__label" for="radio-2">
                                     <span class="slds-radio_faux"></span>
                                     <span class="slds-form-element__label">In-store Code Only</span>
                                 </label>
                             </span>
                             <span class="slds-radio">
-                                <input type="radio" class="promotion_type" id="promotion_type" value="online_instore" name="promotionType" />
-                                <label class="slds-radio__label" for="promotion_type">
+                                <input type="radio" class="promotion_type" id="radio-3" value="online_instore" name="promotionType" />
+                                <label class="slds-radio__label" for="radio-3">
                                     <span class="slds-radio_faux"></span>
                                     <span class="slds-form-element__label">Online and In-store Code</span>
                                 </label>
                             </span>
 
                             <span class="slds-radio">
-                                <input type="radio" class="promotion_type" id="promotion_type" value="no_code" name="promotionType" />
-                                <label class="slds-radio__label" for="promotion_type">
+                                <input type="radio" class="promotion_type" id="radio-4" value="no_code" name="promotionType" />
+                                <label class="slds-radio__label" for="radio-4">
                                     <span class="slds-radio_faux"></span>
                                     <span class="slds-form-element__label">No Code - Just a promotion association</span>
                                 </label>
@@ -341,14 +341,14 @@
                     <fieldset class="slds-form-element slds-form-element_stacked">
                         <div class="slds-form-element__control">
                             <span class="slds-radio">
-                                <input type="radio" class="online_promotion_type" id="online_promotion_type" value="global" name="onlinePromotionType" checked="checked" />
+                                <input type="radio" class="online_promotion_type" id="radio-5" value="global" name="onlinePromotionType" checked="checked" />
                                 <label class="slds-radio__label" for="radio-5">
                                     <span class="slds-radio_faux"></span>
                                     <span class="slds-form-element__label">Global Online Code</span>
                                 </label>
                             </span>
                             <span class="slds-radio">
-                                <input type="radio" class="online_promotion_type" id="online_promotion_type" value="unique" name="onlinePromotionType" />
+                                <input type="radio" class="online_promotion_type" id="radio-6" value="unique" name="onlinePromotionType" />
                                 <label class="slds-radio__label" for="radio-6">
                                     <span class="slds-radio_faux"></span>
                                     <span class="slds-form-element__label">Voucher Pot</span>
