Adding promo logic and loyalty flag

--- a/public/index.html
+++ b/public/index.html
@@ -1131,6 +1131,7 @@
                                         <select class="slds-select" id="instore_code_1">
                                             <option value="no-code">No Code</option>
                                         </select>
+                                        <input type="hidden" id="instore_code_1_loyalty_promotion" value="false" />
                                     </div>
                                 </div>
                             </div>
@@ -1190,6 +1191,7 @@
                                         <select class="slds-select" id="instore_code_2">
                                             <option value="no-code">No Code</option>
                                         </select>
+                                        <input type="hidden" id="instore_code_2_loyalty_promotion" value="false" />
                                     </div>
                                 </div>
                             </div>
@@ -1208,7 +1210,7 @@
                             <div class="slds-form-element">
                                 <label class="slds-form-element__label">Redemptions</label>
                                 <div class="slds-form-element__control">
-                                    <input data-attribute-type="int" data-attribute-length="3" type="number" min="0" max="999" id="instore_code_2_redemptions" placeholder="1" class="slds-input" />
+                                    <input data-attribute-type="int" data-attribute-length="3" type="number" min="0" max="999" id="instore_code_2_redemptions" placeholder="0" class="slds-input" />
                                 </div>
                             </div>
                         </div>
@@ -1249,6 +1251,7 @@
                                         <select class="slds-select" id="instore_code_3">
                                             <option value="no-code">No Code</option>
                                         </select>
+                                        <input type="hidden" id="instore_code_3_loyalty_promotion" value="false" />
                                     </div>
                                 </div>
                             </div>
@@ -1308,6 +1311,7 @@
                                         <select class="slds-select" id="instore_code_4">
                                             <option value="no-code">No Code</option>
                                         </select>
+                                        <input type="hidden" id="instore_code_4_loyalty_promotion" value="false" />
                                     </div>
                                 </div>
                             </div>
@@ -1367,6 +1371,7 @@
                                         <select class="slds-select" id="instore_code_5">
                                             <option value="no-code">No Code</option>
                                         </select>
+                                        <input type="hidden" id="instore_code_5_loyalty_promotion" value="false" />
                                     </div>
                                 </div>
                             </div>
