Working on summary page

--- a/public/index.html
+++ b/public/index.html
@@ -1333,6 +1333,7 @@
                                         <span>Main Setup</span>
                                     </a>
                                 </h2>
+                                <p>Your promotion is now configured, please review the information below. If you're satisfied you can send the promotion to Optima using the respective button. Once you click "Done", the widget will cache these settings and allow you to edit the promotion later on. Doing so will set the promotion refresh flag to "true".</p>
                             </div>
                         </header>
                     </div>
