--- a/public/index.html
+++ b/public/index.html
@@ -1340,6 +1340,8 @@
                     <div class="slds-card__body slds-card__body_inner">
                         <button class="slds-button slds-button_success">Send to Optima?</button>
                         <button class="slds-button slds-button_destructive">Remove this promotion?</button>
+                        <dl class="slds-list_horizontal slds-wrap" id="summary-main-setup">
+                        </dl>
                     </div>
                 </article>
             </div>
@@ -1367,7 +1369,8 @@
                         </header>
                     </div>
                     <div class="slds-card__body slds-card__body_inner">
-                        test
+                        <dl class="slds-list_horizontal slds-wrap" id="summary-online-setup">
+                        </dl>
                     </div>
                 </article>
             </div>
@@ -1393,7 +1396,8 @@
                         </header>
                     </div>
                     <div class="slds-card__body slds-card__body_inner">
-                        test
+                        <dl class="slds-list_horizontal slds-wrap" id="summary-instore-setup">
+                        </dl>
                     </div>
                 </article>
             </div>
