--- a/public/index.html
+++ b/public/index.html
@@ -354,7 +354,7 @@
                                 <div class="slds-clearfix">
                                     <div class="slds-float_right">
                                         <div class="slds-form-element sfmc-input">
-                                            <label class="slds-form-element__label">Add days to expiry?</label>
+                                            <label class="slds-form-element__label">Override expiry?</label>
                                             <div class="slds-form-element__control">
                                                 <div class="slds-checkbox">
                                                     <input type="checkbox" name="options" id="global_code_1_date_override" value=""/>
@@ -405,7 +405,7 @@
                                 <div class="slds-clearfix">
                                     <div class="slds-float_right">
                                         <div class="slds-form-element sfmc-input">
-                                            <label class="slds-form-element__label">Add days to expiry?</label>
+                                            <label class="slds-form-element__label">Override expiry?</label>
                                             <div class="slds-form-element__control">
                                                 <div class="slds-checkbox">
                                                     <input type="checkbox" name="options" id="global_code_2_date_override" value=""/>
@@ -456,7 +456,7 @@
                                 <div class="slds-clearfix">
                                     <div class="slds-float_right">
                                         <div class="slds-form-element sfmc-input">
-                                            <label class="slds-form-element__label">Add days to expiry?</label>
+                                            <label class="slds-form-element__label">Override expiry?</label>
                                             <div class="slds-form-element__control">
                                                 <div class="slds-checkbox">
                                                     <input type="checkbox" name="options" id="global_code_3_date_override" value=""/>
@@ -507,7 +507,7 @@
                                 <div class="slds-clearfix">
                                     <div class="slds-float_right">
                                         <div class="slds-form-element sfmc-input">
-                                            <label class="slds-form-element__label">Add days to expiry?</label>
+                                            <label class="slds-form-element__label">Override expiry?</label>
                                             <div class="slds-form-element__control">
                                                 <div class="slds-checkbox">
                                                     <input type="checkbox" name="options" id="global_code_4_date_override" value=""/>
@@ -560,7 +560,7 @@
                                 <div class="slds-clearfix">
                                     <div class="slds-float_right">
                                         <div class="slds-form-element sfmc-input">
-                                            <label class="slds-form-element__label">Add days to expiry?</label>
+                                            <label class="slds-form-element__label">Override expiry?</label>
                                             <div class="slds-form-element__control">
                                                 <div class="slds-checkbox">
                                                     <input type="checkbox" name="options" id="global_code_5_date_override" value=""/>
@@ -630,7 +630,7 @@
                                 <div class="slds-clearfix">
                                     <div class="slds-float_right">
                                         <div class="slds-form-element sfmc-input">
-                                            <label class="slds-form-element__label">Add days to expiry?</label>
+                                            <label class="slds-form-element__label">Override expiry?</label>
                                             <div class="slds-form-element__control">
                                                 <div class="slds-checkbox">
                                                     <input type="checkbox" name="options" id="unique_code_1_date_override" value=""/>
@@ -698,7 +698,7 @@
                                 <div class="slds-clearfix">
                                     <div class="slds-float_right">
                                         <div class="slds-form-element sfmc-input">
-                                            <label class="slds-form-element__label">Add days to expiry?</label>
+                                            <label class="slds-form-element__label">Override expiry?</label>
                                             <div class="slds-form-element__control">
                                                 <div class="slds-checkbox">
                                                     <input type="checkbox" name="options" id="unique_code_2_date_override" value=""/>
@@ -767,7 +767,7 @@
                                 <div class="slds-clearfix">
                                     <div class="slds-float_right">
                                         <div class="slds-form-element sfmc-input">
-                                            <label class="slds-form-element__label">Add days to expiry?</label>
+                                            <label class="slds-form-element__label">Override expiry?</label>
                                             <div class="slds-form-element__control">
                                                 <div class="slds-checkbox">
                                                     <input type="checkbox" name="options" id="unique_code_3_date_override" value=""/>
@@ -835,7 +835,7 @@
                                 <div class="slds-clearfix">
                                     <div class="slds-float_right">
                                         <div class="slds-form-element sfmc-input">
-                                            <label class="slds-form-element__label">Add days to expiry?</label>
+                                            <label class="slds-form-element__label">Override expiry?</label>
                                             <div class="slds-form-element__control">
                                                 <div class="slds-checkbox">
                                                     <input type="checkbox" name="options" id="unique_code_4_date_override" value=""/>
@@ -903,7 +903,7 @@
                                 <div class="slds-clearfix">
                                     <div class="slds-float_right">
                                         <div class="slds-form-element sfmc-input">
-                                            <label class="slds-form-element__label">Add days to expiry?</label>
+                                            <label class="slds-form-element__label">Override expiry?</label>
                                             <div class="slds-form-element__control">
                                                 <div class="slds-checkbox">
                                                     <input type="checkbox" name="options" id="unique_code_5_date_override" value=""/>
@@ -1037,7 +1037,7 @@
                             <div class="slds-clearfix">
                                 <div class="slds-float_right">
                                     <div class="slds-form-element sfmc-input">
-                                        <label class="slds-form-element__label">Add days to expiry?</label>
+                                        <label class="slds-form-element__label">Override expiry?</label>
                                         <div class="slds-form-element__control">
                                             <div class="slds-checkbox">
                                                 <input type="checkbox" name="options" id="instore_code_1_date_override_1" value=""/>
@@ -1097,7 +1097,7 @@
                             <div class="slds-clearfix">
                                 <div class="slds-float_right">
                                     <div class="slds-form-element sfmc-input">
-                                        <label class="slds-form-element__label">Add days to expiry?</label>
+                                        <label class="slds-form-element__label">Override expiry?</label>
                                         <div class="slds-form-element__control">
                                             <div class="slds-checkbox">
                                                 <input type="checkbox" name="options" id="instore_code_2_date_override" value=""/>
@@ -1157,7 +1157,7 @@
                             <div class="slds-clearfix">
                                 <div class="slds-float_right">
                                     <div class="slds-form-element sfmc-input">
-                                        <label class="slds-form-element__label">Add days to expiry?</label>
+                                        <label class="slds-form-element__label">Override expiry?</label>
                                         <div class="slds-form-element__control">
                                             <div class="slds-checkbox">
                                                 <input type="checkbox" name="options" id="instore_code_3_date_override" value=""/>
@@ -1217,7 +1217,7 @@
                             <div class="slds-clearfix">
                                 <div class="slds-float_right">
                                     <div class="slds-form-element sfmc-input">
-                                        <label class="slds-form-element__label">Add days to expiry?</label>
+                                        <label class="slds-form-element__label">Override expiry?</label>
                                         <div class="slds-form-element__control">
                                             <div class="slds-checkbox">
                                                 <input type="checkbox" name="options" id="instore_code_4_date_override" value=""/>
@@ -1277,7 +1277,7 @@
                             <div class="slds-clearfix">
                                 <div class="slds-float_right">
                                     <div class="slds-form-element sfmc-input">
-                                        <label class="slds-form-element__label">Add days to expiry?</label>
+                                        <label class="slds-form-element__label">Override expiry?</label>
                                         <div class="slds-form-element__control">
                                             <div class="slds-checkbox">
                                                 <input type="checkbox" name="options" id="instore_code_date_override_5" value=""/>
