--- a/public/index.html
+++ b/public/index.html
@@ -1365,9 +1365,11 @@
                         </header>
                     </div>
                     <div class="slds-card__body slds-card__body_inner">
-                        <button class="slds-button slds-button_success" id="control_action_optima">Send to Optima?</button>
-                        <button class="slds-button slds-text-destructive" id="control_action_edit">Edit this promotion?</button>
-                        <button class="slds-button slds-button_destructive" id="control_action_remove">Remove this promotion?</button>
+                        <ul>
+                            <li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_success" id="control_action_optima">Send to Optima?</button></li>
+                            <li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button-brand" id="control_action_edit">Edit this promotion?</button></li>
+                            <li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_destructive" id="control_action_remove">Remove this promotion?</button></li>
+                        </ul>
                     </div>
                 </article>
             </div>
