--- a/public/index.html
+++ b/public/index.html
@@ -1348,9 +1348,9 @@
                     <div class="slds-card__header slds-grid">
                         <header class="slds-media slds-media_center slds-has-flexi-truncate">
                             <div class="slds-media__figure">
-                                <span class="slds-icon_container slds-icon-standard-remove_relationship" title="remove_relationship">
+                                <span class="slds-icon_container slds-icon-standard-remove_relationship" title="account">
                                     <svg class="slds-icon slds-icon_small" aria-hidden="true">
-                                        <use xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#remove_relationship"></use>
+                                        <use xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"></use>
                                     </svg>
                                     <span class="slds-assistive-text">Control Area</span>
                                 </span>
@@ -1361,6 +1361,7 @@
                                         <span>Control Area</span>
                                     </a>
                                 </h2>
+                                <p>Please use this section carefully. Editing will set REFRESH_FLAG to true.</p>
                             </div>
                         </header>
                     </div>
