Template finally done :)

--- a/public/index.html
+++ b/public/index.html
@@ -1280,8 +1280,8 @@
                                         <label class="slds-form-element__label">Override expiry?</label>
                                         <div class="slds-form-element__control">
                                             <div class="slds-checkbox">
-                                                <input type="checkbox" name="options" id="instore_code_date_override_5" value=""/>
-                                                <label class="slds-checkbox__label" for="instore_code_date_override_5">
+                                                <input type="checkbox" name="options" id="instore_code_5_date_override" value=""/>
+                                                <label class="slds-checkbox__label" for="instore_code_5_date_override">
                                                     <span class="slds-checkbox_faux"></span>
                                                 </label>
                                             </div>
@@ -1294,7 +1294,7 @@
                             <div class="slds-form-element">
                                 <label class="slds-form-element__label">Days to add</label>
                                 <div class="slds-form-element__control">
-                                    <input data-attribute-type="int" data-attribute-length="3" type="number" min="0" max="365" id="instore_voucher_date_override_5_days" placeholder="0" class="slds-input" />
+                                    <input data-attribute-type="int" data-attribute-length="3" type="number" min="0" max="365" id="instore_code_5_add_days" placeholder="0" class="slds-input" />
                                 </div>
                             </div>
                         </div>
